syntax = "proto3";

option csharp_namespace = "ChatServer";

package chatter;

service ChatService {
    rpc chat(stream ChatRequest) returns (stream ChatReply);
}
message ChatRequest {
    string name = 1;
    string message = 2;
    bool status = 3;
}

message ChatReply {
    string name = 1;
    string message = 2;
    bool status = 3;
}
